force-app/main/default/objects/Opportunity/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount percentage notifies for approval.</description>
    <label>Discount Percent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>