force-app/main/default/objects/Opportunity/fields/Opportunity_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Progress__c</fullName>
    <formula>IF(
 Percent_Completed__c &gt; 75, 
 &quot;Late&quot;,
 IF(
  Percent_Completed__c &gt; 25, 
  &quot;Middle&quot;,
  &quot;Early&quot;
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Progress</label>
    <type>Text</type>
</CustomField>