force-app/main/default/objects/Opportunity/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <formula>IF(
 TODAY() &gt;= CloseDate,
 1,
 IF(
  CloseDate != DATEVALUE(CreatedDate),
  (TODAY()-DATEVALUE(CreatedDate))/(CloseDate-DATEVALUE(CreatedDate)),
  1
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>