force-app/main/default/objects/Opportunity/validationRules/Close_Date_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Alert</fullName>
    <active>true</active>
    <description>If the opp is closed, must have a Close Date of today or in the future.</description>
    <errorConditionFormula>AND(
  NOT(IsClosed),
  CloseDate &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date</errorMessage>
</ValidationRule>